terraform/alb.tf
# ALB Security Group
resource "aws_security_group" "alb_sg" {
  name   = "${var.student_id}-alb-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Single Public ALB
resource "aws_lb" "combined_alb" {
  name               = "${var.student_id}-combined-alb"
  load_balancer_type = "application"
  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]
  security_groups    = [aws_security_group.alb_sg.id]
}

# Target Group for combined container
resource "aws_lb_target_group" "combined_tg" {
  name        = "${var.student_id}-combined-tg"
  port        = 5000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    path                = "/"
    port                = "traffic-port"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}

# Listener for Combined (Backend and Frontend) ALB
resource "aws_lb_listener" "combined_listener" {
  load_balancer_arn = aws_lb.combined_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.combined_tg.arn
  }
}
